Add tools downloader
